<resources>
    <string name="app_name">Elva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="new_note">New note</string>
    <string name="new_note_name">New Note</string>
    <string name="write_something">Write something</string>
    <string name="save">Save</string>
    <string name="attach_file">attach file</string>
    <string name="add_drawing">add drawing</string>
    <string name="delete_attachment">delete attachment</string>
    <string name="move_up">move up</string>
    <string name="move_down">move down</string>
    <string name="delete_block">delete</string>
</resources>