<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/attach_file"
        android:id="@+id/action_attach"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/add_drawing"
        android:id="@+id/action_drawing"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/delete_attachment"
        android:id="@+id/delete_attachment"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/move_up"
        android:id="@+id/action_up" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/move_down"
        android:id="@+id/action_down" />
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/delete_block"
        android:id="@+id/action_delete_block" />
</menu>